Fix label overlapping issue and hrc20 sharding issue

--- a/src/popup/css/style.scss
+++ b/src/popup/css/style.scss
@@ -282,6 +282,7 @@ button.add_token {
   min-width: 40px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
   bottom: 20px;
+  border: none;
 }
 
 button.add_token:hover {
